# Thoth

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  GEMINI.md  REBRAND.md  check_baseline.py  docker-compose.yml  test_memory.db-shm  test_memory.db-wal
.github/workflows/: ci-compose.yml  ci-security.yml
docker/: Dockerfile.engine  README.md  compose.ci.yml  entrypoint-engine.sh  seed-workspace.sh  smoke.sh
docker/seed_rag/: GRAG.md  HOWTO.md  README.md  cognate.md
docs/: C6_phase3_analyzer_contract.md  C6_phase3_join_contract.md  C6_phase3_protocol.md  C6_phase3_reporting_contract.md  COGNATE_V2.html  COGNATE_V2.md  C_PHASE_PROTOCOL.md  D5_PROTOCOL.md  D_PHASE_PROTOCOL.md  E2_PROTOCOL.md  EGAR.md  ENGINE_EVENTS.md  E_PHASE_PROTOCOL.md  G1D_CLOSEOUT_PROTOCOL.md  G1E_POLARITY_PROTOCOL.md  GETTING_STARTED.md  GRAG.md  HOWTO.md  INDEX.md  M4_PROTOCOL.md  MYPAPER.md  NODE.md  PLAN.md  README.md  TEST.md  TESTING.md  TEST_SUITE.md  TEST_SUITE_GUI_CHECKLIST.md  TOOLS.md  TRAJECTORY_PAPER.md  VERIFIED_BASELINE.md  about_thoth.md  architectural_facts.md  audit.md  basic_agent_design_goal.md  benchmark_environment.md  benchmark_results.md  build_node.md  chat_findings.md  cognate.md  (+41 more)
docs/baselines/: BASELINE_PROVENANCE.md  PHASE_E_PROVENANCE.md  fingerprint_lock.md  phase_b_baseline_verification.md  phase_e_baseline_verification.md  phase_e_claims_audit.json  phase_e_claims_audit.md  phase_e_l4_status.json  phase_e_l4_verification.md  phase_e_run_manifest.json
docs/baselines/artifacts/phase_b/: episodic_learning_benchmark_snapshot.jsonl  run_01_summary.json  run_02_summary.json
docs/baselines/artifacts/phase_e/: episodic_learning_benchmark_snapshot.jsonl  run_01_benchmark_env.json  run_01_l2_environment.json  run_01_summary.json  run_02_benchmark_env.json  run_02_l2_environment.json  run_02_summary.json
docs/baselines/artifacts/phase_e/superseded_e228_fail_pre_fix/: episodic_learning_benchmark_snapshot.jsonl  run_01_benchmark_env.json  run_01_summary.json  run_02_benchmark_env.json  run_02_summary.json
docs/baselines/artifacts/phase_e/superseded_pre_ep015/: episodic_learning_benchmark_snapshot.jsonl
docs/benchmark_results/: phase_b_baseline_v1.md  phase_e_strict_v1.md
docs/phases/: E_ANALYSIS_PLAN.md  PHASE_B_COMPLETE.md  PHASE_C_COMPLETE.md  PHASE_D_COMPLETE.md  PHASE_E_COMPLETE.md
includes/: AgentInterface.h  BenchmarkWindow.h  ChatMessagePanel.h  ChatSessionDataViewModel.h  ChatSessionRenderer.h  ChatSessionTypes.h  ExecutiveStateStrip.h  ExperimentLabPanel.h  FileDropTarget.h  GragDiagnosticsPanel.h  GraphPanel.h  MainFrame.h  PlanExecutionPanel.h  StrategyPanel.h  TrajectoryViewer.h  VisualizationFrame.h  grag_diagnostics_display.h  i_agent_backend.h  local_agent_backend.h  remote_agent_backend.h  remote_agent_http_utils.h  remote_agent_sse_utils.h
scripts/: analyze_cognitive_longitudinal.py  c6_longitudinal_join.py  c6_longitudinal_provenance.py  c6_longitudinal_report.py  c6_longitudinal_threats.py  compare_benchmark_env.py  generate_c6_official_longitudinal_fixtures.py  plot_cognitive_longitudinal.py  plot_cognitive_metrics.py  summarize_cognitive_metrics.py  test_c6_longitudinal_analyzer.py  test_c6_longitudinal_join.py  test_c6_longitudinal_plots.py  test_c6_longitudinal_provenance.py  test_c6_longitudinal_reporting.py  test_c6_longitudinal_threats.py  verify_phase_e_l4.py
src/: AgentInterface.cpp  BenchmarkWindow.cpp  ChatMessagePanel.cpp  ChatSessionDataViewModel.cpp  ChatSessionRenderer.cpp  ExecutiveStateStrip.cpp  ExperimentLabPanel.cpp  FileDropTarget.cpp  GragDiagnosticsPanel.cpp  GraphPanel.cpp  MainFrame.cpp  PlanExecutionPanel.cpp  StrategyPanel.cpp  TrajectoryViewer.cpp  VisualizationFrame.cpp  local_agent_backend.cpp  main.cpp  remote_agent_backend.cpp
tests/: CMakeLists.txt  run_test_suite.cpp  unit_tests.cpp
tests/fixtures/cognitive_longitudinal/: README.md  analyzer_golden_official_longitudinal.json  analyzer_golden_summary.json  analyzer_trend_golden.json  app_log.jsonl  benchmark_env.jsonl  benchmark_env_gates_aborted.jsonl  benchmark_env_gates_green.jsonl  benchmark_env_official_longitudinal.jsonl  decision_trace.jsonl  gate_status_golden.json  golden_join_results.json  metrics.jsonl  metrics_gates_green.jsonl  metrics_official_longitudinal.jsonl  prior_longitudinal.jsonl  report_header_golden.md  report_header_incomplete_golden.md
